Lecture 14 - Implementing Refresh Tokens

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ JWT_SECRET=abeer
 JWT_TOKEN_AUDIENCE=localhost:3000
 JWT_TOKEN_ISSUER=localhost:3000
 JWT_ACCESS_TOKEN_TTL=300 #5minutes
+JWT_REFRESH_TOKEN_TTL=60 #1minute
